@@ -1,12 +1,13 @@
 0.9.92 (1.0.0 beta3):
 -Add: User defined command line arguments for lame
+-Add: User defined command to execute after a file has been converted
+-Change: Create temp files in the kde-user temp dir
+-Change: Remove partially converted files on abort or fail
 -Fix: Remove audio/mpeg mime type from mp1 and mp2 codecs in the ffmpeg and mplayer plugins because it would conflict with mp3
 -Fix: soundKonverter would get stuck when trying to add replaygain (add argument for mp3gain/aacgain to lower gain to avoid clipping)
 -Fix: soundkonverter would crash when trying to rip a cd or add files if the options widget can't be initialized correctly
 -Fix: The options widget wasn't initialized correctly causing some crashes
 -Fix: Don't truncate text in the combo button (add files, etc.)
--Change: Create temp files in the kde-user temp dir
--Change: Remove partially converted files on abort or fail
 
 0.9.91 (1.0.0 beta2):
 -Add: flac and metaflac plugins
